--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -14,8 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd0571bacba9a29d47d526870ce679dff83b29c24567c7b1ef6e20c2daefc5a9ce9",
+   "name": "python3",
    "display_name": "Python 3.8.5 32-bit"
+  },
+  "interpreter": {
+   "hash": "571bacba9a29d47d526870ce679dff83b29c24567c7b1ef6e20c2daefc5a9ce9"
   }
  },
  "nbformat": 4,
@@ -98,7 +101,7 @@
   },
   {
    "source": [
-    "PCA should be carried out on the correlation matrix. All the variables (nutrients) measure mass. Although they currently have different scales (g/mg/mcg), it won't matter when they are standardized."
+    "PCA should be carried out on the correlation matrix. All the variables (nutrients) measure mass (per 100g). Although they currently have different scales (g/mg/mcg), it won't matter when they are standardized (converted to z-scores)."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -196,7 +199,7 @@
    "source": [
     "#### Method 1 - Kaiser's Rule\n",
     "\n",
-    "PCA was carried out on the correlation matrix, so Kaiser's Rule can be used in this case. By Kaiser's Rule, only the top 2 PCs should be kept."
+    "PCA was carried out on the correlation matrix, so Kaiser's Rule can be used in this case. Kaiser’s Rule states that only PCs that have eigenvalues greater than 1. By Kaiser's Rule, only the top 2 PCs should be kept."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -217,7 +220,7 @@
    "source": [
     "#### Method 2 - Cumulative Explained Variance\n",
     "\n",
-    "The top 2 PCs explain more than 80% (81%) of the total variance; hence, only the top 2 PCs should be retained."
+    "For this analysis, 80% is the benchmark for sufficient explained variance. The top 2 PCs already explain more than 80% (82%) of the total variance. Hence, only the top 2 PCs should be retained."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -342,6 +345,13 @@
     "\n",
     "score_plot(df_scaled, pca, labels=df['Type'])"
    ]
+  },
+  {
+   "source": [
+    "From the score plot, it can be observed that the cheese, yogurt and ice cream clusters are quite distinct in terms of PC1 and PC2. The cream data points have more variability across the PC1 axis, and the milk data points are scattered across both axes (perhaps due to outliers)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -471,7 +481,9 @@
   },
   {
    "source": [
-    "Yogurt and ice cream. The yogurt (orange) and ice cream (purple) products have generally low PC 1 scores. Recalling the interpretations of the PCs, \"a lower score for PC 1 means that the food has a greater concentration of sugar nutrients as compared to non-sugar nutrients\". Therefore, the dairy product(s) with high carbohydrates and sugar but low in other nutrients should have low PC 1 scores. The milk (green) and cream (red) products have high variances for PC 1 scores, so they cannot be considered to have high carbohydrates and sugar but low in other nutrients."
+    "Yogurt and ice cream. The yogurt (orange) and ice cream (purple) products have generally low PC 1 scores. Recalling the interpretations of the PCs, \"a lower score for PC 1 means that the food has a greater concentration of sugar nutrients as compared to non-sugar nutrients\". Therefore, the dairy product(s) with high carbohydrates and sugar but low in other nutrients should have low PC 1 scores.\n",
+    "\n",
+    "For milk (green) and cream (red) products, some data points have positive PC 1 scores while others have negative PC 1 scores. Due to this inconsistency, they cannot be definitively classified to have high carbohydrates and sugar but low in other nutrients."
    ],
    "cell_type": "markdown",
    "metadata": {}
