--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -14,8 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd0571bacba9a29d47d526870ce679dff83b29c24567c7b1ef6e20c2daefc5a9ce9",
+   "name": "python3",
    "display_name": "Python 3.8.5 32-bit"
+  },
+  "interpreter": {
+   "hash": "571bacba9a29d47d526870ce679dff83b29c24567c7b1ef6e20c2daefc5a9ce9"
   }
  },
  "nbformat": 4,
@@ -177,7 +180,7 @@
    "source": [
     "#### Method 2 - Cumulative Explained Variance\n",
     "\n",
-    "The top 3 PCs explain more than 80% (90%) of the total variance; hence, only the top 3 PCs should be retained."
+    "Once again, 80% is the benchmark in this analysis. The top 3 PCs explain more than 80% (90%) of the total variance. Hence, only the top 3 PCs should be retained."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -290,6 +293,13 @@
     "\n",
     "score_plot(df_numeric, pca, labels=df['Class'])"
    ]
+  },
+  {
+   "source": [
+    "From the 3D score plot, it is quite obvious that the different classes of glass objects form relatively distinct clusters. This is useful in predicting the class of an unknown glass object, like in Part (c)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -480,12 +490,7 @@
   },
   {
    "source": [
-    "PC3 captures the contrast between the more important variables and less important variables of PC1 and PC2. \n",
-    "*   For PC1, `Ca` and `K` have the 2 highest absolute loading values\n",
-    "*   For PC2, `K` and `Mg` have the 2 highest absolute loading values\n",
-    "*   These 3 variables (`Mg`, `K` and `Ca`) have negative loading values for PC3\n",
-    "*   The rest of the variables (`Si`, `Al` and `Na`) have positive loading values for PC3\n",
-    "*   A higher PC3 score means that the glass object scored lower for PCs 1 and 2 ???????"
+    "PC3 captures the contrast between the more important variables and less important variables of both PC1 and PC2. For PC1, `Ca` and `K` have the 2 highest absolute loading values. In other words, `Ca` and `K` are the most important variables for PC 1. For PC2, `K` and `Mg` are the most important variables. These 3 variables (`Mg`, `K` and `Ca`) have negative loading values for PC3. The rest of the variables (`Si`, `Al` and `Na`) have positive loading values for PC3. PC3 tells the difference between the positive and negative values of the individual variables during transformation by PC1 or PC2. For example, if PC1 was close to 0, and PC3 was large, that means that during the transformation of PC1, the individual transformed variables were quite even."
    ],
    "cell_type": "markdown",
    "metadata": {}
